# OpenGL-basics-BezierCurve

./: .gitignore  CMakeLists.txt  README.md
Basic_Bezier_Curves/: CMakeLists.txt
Basic_Bezier_Curves/include/glad/: glad.h
Basic_Bezier_Curves/src/: glad.c  main.cpp
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
